[gd_scene load_steps=12 format=3 uid="uid://4x521qri8ul1"]

[ext_resource type="Script" uid="uid://bu54w76h513xk" path="res://slay_the_wc/Scenes/Menus/DeckSelection/deck_selection.gd" id="1_wccow"]
[ext_resource type="PackedScene" uid="uid://diahsebjgskd0" path="res://slay_the_wc/Scenes/Menus/DeckSelection/deck_tab.tscn" id="2_emwxf"]
[ext_resource type="Resource" uid="uid://clylu2ckywn8u" path="res://slay_the_wc/Mascot/Data/12Pandas.tres" id="3_marq2"]
[ext_resource type="Resource" uid="uid://bktwb2vcvb6r0" path="res://slay_the_wc/Mascot/Data/5d6.tres" id="3_wltii"]
[ext_resource type="Texture2D" uid="uid://cs1qe6awkyhlw" path="res://slay_the_wc/Assets/Art/patate_ennemie.png" id="4_mdw6b"]
[ext_resource type="Resource" uid="uid://cv7xqru0hktx3" path="res://slay_the_wc/Scenes/Menus/DeckSelection/deck.tres" id="4_o21fc"]
[ext_resource type="Resource" uid="uid://be71jmlaiee01" path="res://slay_the_wc/Mascot/Data/UwU.tres" id="6_marq2"]
[ext_resource type="Resource" uid="uid://bbu4b0sorcf3j" path="res://slay_the_wc/Mascot/Data/Bibi.tres" id="7_3k8pf"]
[ext_resource type="Resource" uid="uid://d08ms81l5qrkc" path="res://slay_the_wc/Mascot/Data/BeurreSale.tres" id="8_yh1kd"]
[ext_resource type="Resource" uid="uid://p6mtpue6roc" path="res://slay_the_wc/Mascot/Data/Aixasperants.tres" id="9_3j3n3"]
[ext_resource type="Resource" uid="uid://drrc22fcxgjln" path="res://slay_the_wc/Mascot/Data/Pentamonstres.tres" id="10_7bvkn"]

[node name="DeckSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wccow")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VFlowContainer" type="VFlowContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Deck 1"
autowrap_mode = 2

[node name="Button2" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 2"
autowrap_mode = 2

[node name="Button3" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 3"
autowrap_mode = 2

[node name="Button4" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 4"
autowrap_mode = 2

[node name="Button5" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 5"
autowrap_mode = 2

[node name="Button6" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 6"
autowrap_mode = 2

[node name="Button7" type="Button" parent="HBoxContainer/VFlowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
text = "Deck 7"
autowrap_mode = 2

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0
tabs_visible = false

[node name="Panda" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
layout_mode = 2
mascot = ExtResource("3_marq2")

[node name="5d6" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("3_wltii")
metadata/_tab_index = 1
metadata/mascotte = ExtResource("4_mdw6b")
metadata/description = "Ajoute un paramètre, le Compteur Mite, qui permet, en le faisant baisser, de jouer les cartes mite plus puissantes. Il faut pondre des oeufs avec des cartes dédiés pour faire remonter le compteur."
metadata/start_deck = ExtResource("4_o21fc")

[node name="Bibi" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("7_3k8pf")
metadata/_tab_index = 2

[node name="Beurre" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("8_yh1kd")
metadata/_tab_index = 3

[node name="Pentamonstres" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("10_7bvkn")
metadata/_tab_index = 4

[node name="UwU" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("6_marq2")
metadata/_tab_index = 5
metadata/mascotte = ExtResource("4_mdw6b")
metadata/description = "Ajoute un paramètre, le Compteur Mite, qui permet, en le faisant baisser, de jouer les cartes mite plus puissantes. Il faut pondre des oeufs avec des cartes dédiés pour faire remonter le compteur."
metadata/start_deck = ExtResource("4_o21fc")

[node name="Aixasperants" parent="HBoxContainer/TabContainer" instance=ExtResource("2_emwxf")]
visible = false
layout_mode = 2
mascot = ExtResource("9_3j3n3")
metadata/_tab_index = 6

[node name="ButtonReturn" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07700001
anchor_top = 0.003
anchor_right = 0.15100001
anchor_bottom = 0.059000004
text = "Retour"

[node name="ButtonNext" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.947
anchor_top = 0.003
anchor_right = 0.98800004
anchor_bottom = 0.044000003
grow_horizontal = 0
text = "Suivant
"

[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button" to="." method="_on_button_toggled" binds= [0]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button2" to="." method="_on_button_toggled" binds= [1]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button3" to="." method="_on_button_toggled" binds= [2]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button4" to="." method="_on_button_toggled" binds= [3]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button5" to="." method="_on_button_toggled" binds= [4]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button6" to="." method="_on_button_toggled" binds= [5]]
[connection signal="toggled" from="HBoxContainer/VFlowContainer/Button7" to="." method="_on_button_toggled" binds= [6]]
[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
